kns: Get the distributor name from attica rather than from KNS

We get a slighlty better string, although possibly not yet end game.
It's good to show a domain though, which does tell us where it's getting
it from.

Special-case the KDE Store, which is probably what we'll be finding on
most instances.

BUG: 451726